# the_ultimate_flask_course_projects

food_tracker/: app.py  database.py  food_tracker.db  init_db.sql  pyproject.toml
food_tracker/templates/: base.html  day.html  food.html  home.html
question_answer/: app.py  database.py  models.py  pyproject.toml  questions.db  schema.sql
question_answer/repos/: __init__.py  queries.py  question.py  user.py
store_app/: app.py  config.py  pyproject.toml
store_app/admin/: __init__.py  constants.py  forms.py  service.py  views.py
store_app/admin/templates/: base.html
store_app/admin/templates/admin/: add-product.html  index.html  view-order.html
store_app/admin/templates/admin/components/: common.html
store_app/instance/: store_app.db
store_app/migrations/versions/: d20bfe01f5cb_.py
store_app/store/: __init__.py  constants.py  forms.py  models.py  views.py
store_app/store/services/: __init__.py  cart.py  payment.py  product.py  shipping.py
store_app/store/templates/store/: cart.html  checkout.html  index.html  view-product.html
store_app/store/templates/store/components/: carousel.html  common.html  items.html
store_app/utils/: __init__.py  common.py  flask.py
twitter_clone/: app.py  constants.py  forms.py  models.py  pyproject.toml  twitter_clone_db.sqlite  views.py
twitter_clone/instance/: twitter_clone_db.sqlite
twitter_clone/migrations/versions/: 283706a005dc_.py  35fc7d1786a1_.py  a8267f67b9cb_.py  e9728c3c8a62_.py
twitter_clone/templates/: base.html  index.html  profile.html  register.html  timeline.html
(+12 files in other folders)
