[tool.poetry]
name = "store_app"
version = "0.1.0"
description = ""
authors = ["Roman Kosarev <rmksrv@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^3.1.0"
Flask-Login = "^0.6.2"
Flask-Reuploaded = "^1.2.0"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
