[tool.poetry]
name = "twitter_clone"
version = "0.1.0"
description = ""
authors = ["Roman Kosarev <rmksrv@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^3.1.0"
Flask-WTF = "^1.0.1"
Flask-Reuploaded = "^1.2.0"
Flask-Login = "^0.6.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
